--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -264,8 +264,8 @@ const App = () => {
 }
 ```
 
-Remove the ability for a new user to link to the Hotspot App. On the Welcome Screen you can now just
-link directly to the black Helium Wallet App.
+Remove the ability for a new user to link to the Hotspot app. On the Welcome Screen you can now just
+link directly to the black Helium Wallet app.
 
 ```tsx
 // src/features/onboarding/welcome/WelcomeScreen.tsx
@@ -376,7 +376,7 @@ Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be
         src={useBaseUrl('img/wallet-app/wallet-home.png')}
       />
       <p>
-        Use the Orange <code>Swap</code> button on the Helium Wallet App home screen to swap HNT for
+        Use the Orange <code>Swap</code> button on the Helium Wallet app home screen to swap HNT for
         DC.
       </p>
     </div>
