bulk commit - migration updates
closes #1383, #1384, #1385, #1386, #1387, #1388, #1389, #1390, #1391, #1392, #1393, #1394

--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -190,7 +190,7 @@ const { solanaTransactions, transferHotspotTxn } = await createTransferTransacti
 
 ---
 
-## Linking to Helium Wallet App for Signing
+## Linking to Helium Wallet app for Signing
 
 You must add `solanaTransactions` to the signature request
 
@@ -252,7 +252,7 @@ useEffect(() => {
 
 ## Update Wallet Link
 
-The Helium Hotspot App is deprecated, Maker Apps should link to the Helium Wallet App. Add the hook
+The Helium Hotspot App is deprecated, Maker Apps should link to the Helium Wallet app. Add the hook
 `useCheckWalletLink()` to `src/App.tsx` It will check to see if the user is linked to the Hotspot
 app and prompt them to update their link
 
@@ -331,7 +331,7 @@ fees post Migration.
 Maker Wallets will need `SOL` to pay transaction fees and for minting new Hotspot NFTs. Note that
 minting is only required if Makers are attempting to mint more than 2x their existing fleet size.
 
-- For most makers, ~10 SOL is recommended.
+- For most Makers, ~10 SOL is recommended.
 - Makers with large fleets (300k+ Hotspots) ~60 SOL is recommended.
 
 #### Minting Cost Examples
@@ -362,10 +362,10 @@ For more insight to the amount of SOL needed, check out
 
 ### Maker Wallet DC
 
-Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be aquired by either
+Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be acquired by either
 
 - Depositing DC into the Maker Wallet on the current Helium L1.
-- Use the Helium Wallet App to swap HNT for DC.
+- Use the Helium Wallet app to swap HNT for DC.
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -376,7 +376,7 @@ Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be
         src={useBaseUrl('img/wallet-app/wallet-home.png')}
       />
       <p>
-        Use the Orange <code>Swap</code> button on the Helium Wallet App homescreen to swap HNT for
+        Use the Orange <code>Swap</code> button on the Helium Wallet app home screen to swap HNT for
         DC.
       </p>
     </div>
@@ -387,7 +387,7 @@ Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be
         src={useBaseUrl('img/wallet-app/token-swap.png')}
       />
       <p>
-        Select <code>HNT</code> in the first Dropdown to swap for <code>DC</code>.
+        Select <code>HNT</code> in the drop-down list to swap for <code>DC</code>.
       </p>
       <p>
         Use the Maker Wallet in the <code>recipient</code> field.
