--- a/docs/solana/migration/governance.mdx
+++ b/docs/solana/migration/governance.mdx
@@ -10,20 +10,22 @@ slug: /solana/migration/governance
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-[Helium Vote](https://helium.vote) will transition to using
-[Solana SPL Governance Realms](https://app.realms.today/).
+[Helium Vote][helium-vote] will transition to using [Solana SPL Governance Realms][realms].
 
 While the user interface will change, the governance process will remain mostly the same.
 
-Using the Helium Wallet App, users will use an embedded browser to visit
-[helium.vote](https://helium.vote), connect a wallet, and vote yes/no on proposals. Ledger users, or
-users of any other Solana wallet, can also navigate to [helium.vote](https://helium.vote), connect a
+Using the Helium Wallet app, users will use an embedded browser to visit
+[https://helium.vote][helium-vote], connect a Wallet, and vote yes/no on proposals. Ledger users, or
+users of any other Solana Wallet, can also navigate to [https://helium.vote][helium-vote], connect a
 wallet, and vote.
 
 ---
 
 ## Governance Changes
 
-The major change with Solana governance is that more of the Helium network can be governed by the
-DAO. Everything from Program (smart contract) changes to approving makers can now be controlled by
-the DAO.
+The major change with Solana governance is that more of the Helium Network can be governed by the
+Helium DAO and its subDAOS. Everything from Program (smart contract) changes to approving Makers can
+now be controlled by the Helium DAO and its subDAOs.
+
+[helium-vote]: https://helium.vote
+[realms]: https://app.realms.today
