--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -15,9 +15,9 @@ Interacting with the Solana blockchain requires a small fee (average transaction
 SOL) paid in SOL tokens, which is massively cheaper than the original Helium blockchain transaction
 fee of $0.35 in DC.
 
-All interactions with the Solana blockchain require fees, including sending tokens, making payments,
-swapping tokens, minting NFTs, claiming rewards from your Hotspots, and all on-chain Helium
-transactions.
+All interactions with the Solana blockchain require fees, including sending tokens, staking tokens,
+making payments, swapping tokens, minting NFTs, claiming rewards from your Hotspots, and all
+on-chain Helium transactions.
 
 ## Solana Accounts and Rent
 
@@ -28,25 +28,25 @@ on accounts.
 Rent Facts:
 
 - Each account has an individual rent fee.
-- Having more accounts requires more rent fees.
 - There is typically one account for each token type.
+- Having more accounts (meaning more token types) requires more rent fees.
 - Closing accounts can return rent to your wallet.
 
 Performing more complex transactions, which include creating accounts, may require more SOL. For
-example, if a wallet does not have enough SOL for rent fees, the wallet can not create new accounts
-to hold tokens, and transactions will fail.
+example, if a Wallet does not have enough SOL for rent fees, the Wallet **cannot** create new
+accounts to hold tokens, and transactions will fail.
 
 This includes reasserting your Hotspot's location, locking HNT to gain veHNT, and potentially more
 complex DeFi actions where multiple accounts must be created (even temporarily).
 
 Locking up HNT to gain [veHNT][vehnt] creates new accounts and requires ~0.014 SOL. It is best
-practice to hold more than the minumum amount of SOL in a wallet to fund additional accounts in the
+practice to hold more than the minimum amount of SOL in a Wallet to fund additional accounts in the
 future.
 
 :::note Foundation Funding
 
 As part of the migration to Solana, the Helium Foundation provided every Helium Wallet with 0.00139
-SOL (enough for 100 standard transfers).
+SOL (enough for 100 standard transactions).
 
 :::
 
