--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -34,7 +34,7 @@ redemption ratio is set algorithmically by the treasury swap contacts based on t
 Score.
 
 The [Helium Wallet App][wallet-app] serves as the primary platform for exchanging IOT to HNT. This
-transaction can also be performed directly through the Solana blockchain using the open source
+transaction can also be performed directly through the Solana blockchain using the open-source
 tooling found in the [Helium GitHub repositories][github].
 
 ## Token Allocation
@@ -45,7 +45,7 @@ Year 1 for IOT started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emisions schedule was created in [HIP-52][hip-52-emisions] and confirmed in
+The emissions schedule was created in [HIP-52][hip-52-emisions] and confirmed in
 [HIP-77][hip-77-emisions] and is as follows:
 
 | Year | IOT at Year Start | IOT Minted | Proof of Coverage <sup>(</sup>[^3]<sup>)</sup> | Data Transfer <sup>(</sup>[^3]<sup>)</sup> | Oracles <sup>(</sup>[^4]<sup>)</sup> | Operations Fund | veHNT Stakes |
@@ -58,11 +58,11 @@ The emisions schedule was created in [HIP-52][hip-52-emisions] and confirmed in
 | 6    | 167.5B            | 8.125B     | 22.5%                                          | 57.5%                                      | 7%                                   | 7%              | 6%           |
 | 7    | 175.625B          | 8.125B     | 21%                                            | 59%                                        | 7%                                   | 7%              | 6%           |
 
-> Full token emissions can be viewed in the IOT section of the [Token Emissions as of Solana
-> Migration][migration-emissions] document.
+> Full token emissions can be viewed in the IOT section of this document: [Token Emissions as of
+> Solana Migration][migration-emissions].
 
 [^3]: Any IOT not rewarded for data transfer is rolled into Proof of Coverage.
-[^4]: Oracles are not rewarded until additional oracle operators deploy services.
+[^4]: Oracles are not rewarded until additional Oracle operators deploy services.
 
 [github]: https://github.com/helium
 [hip-52-emisions]: https://github.com/helium/HIP/blob/main/0052-iot-dao.md#emissions-curve
