--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -40,9 +40,10 @@ tooling found in the [Helium GitHub repositories][github].
 ## Token Allocation
 
 MOBILE follows a similar minting schedule to HNT, however at a max supply of 230,000,000,000 (230B).
-50B MOBILE were pre-mined at the launch of the network and distributed to the network operations
-fund administered by the Helium Foundation. A fraction of this allocation was distributed throughout
-the genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started on August 1st, 2022.
+50B MOBILE were pre-mined at the launch of the Mobile Network and distributed to the Network
+operations fund administered by the Helium Foundation. A fraction of this allocation was distributed
+throughout the Genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started on August
+1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
@@ -63,7 +64,7 @@ The emission schedule was created in [HIP-53][hip-53-emissions], updated in
 > Solana Migration][sol-emisions]
 
 [^4]: Any MOBILE not rewarded for data transfer is rolled into Proof of Coverage.
-[^5]: Oracles are not rewarded until additional oracle operators deploy services.
+[^5]: Oracles are not rewarded until additional Oracle operators deploy services.
 [^6]:
     50B pre-mine, 60B max emitted in year one. Only 30B was emitted as no emissions occurred between
     August 2022 and Jan 31st, 2023
