bulk edits - wallets
closes #1407, #1408, #1410, #1411, #1412

--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -15,19 +15,18 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 ## Wallet Migration Guide
 
 All Helium Wallets will need to be migrated to the Solana blockchain. Please refer to the
-[wallet migration guide](/solana/migration/wallet-user) about the different Wallets and what can be
+[Wallet migration guide](/solana/migration/wallet-user) about the different Wallets and what can be
 expected as part of the blockchain migration.
 
 ---
 
 ## 12-Word And 24-Word Seed Phrases
 
-When a Helium Wallet is created with the Helium Wallet app or Helium Hotspot App, a 24-word "Seed
-Phrase" is generated.
+When a Helium Wallet is created with the Helium Wallet app a 24-word "Seed Phrase" is generated.
 
-Users who created their Helium Wallet using the Helium Hotspot App will have a 12-word seed phrase,
-while the Helium Wallet app accepts 12-word seed phrases, all new wallets are created with 24-word
-seed phrases.
+Users who created their Helium Wallet using the Helium Hotspot app will have a 12-word seed phrase,
+while the Helium Wallet app accepts 12-word seed phrases, all new Helium Wallets are created with
+24-word seed phrases.
 
 Read more about Helium Wallet [seed phrases here](/wallets/wallet-seed-phrase).
 
@@ -42,7 +41,7 @@ Transferring Hotspot ownership between 12-word and 24-word Wallets can only be d
 
 ## iOS and Android Wallet Applications
 
-:::note Download the Helium Wallet Apps
+:::note Download the Helium Wallet Application
 
 <div class="container">
   <div class="row">
