--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -12,8 +12,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Ledger Hardware Wallet
 
-The Helium blockchain has support for Ledger hardware wallets. When installed on a Nano S or Nano X,
-the Helium ledger app allows you to:
+The Helium blockchain has support for Ledger Hardware Wallets. When installed on a Nano S or Nano X,
+the Helium Ledger App allows you to:
 
 - View your Helium address(es) and balances
 - Issue payment to one address
@@ -63,7 +63,7 @@ blocking the USB device.
 :::
 
 To interact with the app on Ledger, you will need to use the Helium Ledger CLI (CLI, for short).
-Head to [Releases in the Github repo](https://github.com/helium/helium-ledger-cli/releases) and
+Head to [Releases in the GitHub repo](https://github.com/helium/helium-ledger-cli/releases) and
 download the most recent release for your operating system.
 
 > We'll use macOS for the remainder of this example.
@@ -133,9 +133,9 @@ QR code.
 
 ## Multiple Wallet Support
 
-Your Ledger hardware wallet can support many accounts per supported coin and this is no different
-for HNT. To interact with a wallet other than the default 0th account, you place a `--account N`
-flag before the command. So the balance command becomes:
+Your Ledger hardware Wallet can support many accounts per supported coin, and this is no different
+for HNT. To interact with a Wallet other than the default 0th account, you place a `--account N`
+flag before the command. So, the balance command becomes:
 
 > `helium-ledger-cli --account 1 balance`
 
@@ -153,7 +153,7 @@ helium-ledger/2.2.3
 ```
 
 This `--account N` prefix applies to all commands. The balance command has a special flag, `--scan`
-that you can place _after_ the command. This allows you to scan all the wallets from 0 to N. For
+that you can place _after_ the command. This allows you to scan all the Wallets from 0 to N. For
 example:
 
 > `helium-ledger-cli --account 8 balance --scan`
@@ -180,12 +180,12 @@ helium-ledger/2.2.3
 
 :::info
 
-Up to 255 wallets may be used on the Ledger, but the `--scan` command fetches each address
+Up to 255 Wallets may be used on the Ledger, but the `--scan` command fetches each address
 one-by-one; it will take quite a long time to get all 255 addresses.
 
 While this convenience feature exists, **double-check the address using the screen of the Ledger**
-(ie: call the specific `--account N balance` without the `--scan` option) before sending any assets.
-A nefarious CLI application could provide fake addresses.
+(i.e.: call the specific `--account N balance` without the `--scan` option) before sending any
+assets. A nefarious CLI application could provide fake addresses.
 
 :::
 
@@ -256,8 +256,8 @@ WARNING: do not use this output as the source of truth. Instead, rely on the Led
 
 :::warning Use the screen of the Ledger to confirm everything you do.
 
-The CLI app could be nefarious (maybe you downloaded the wrong one, maybe somebody change the
-program on your computer, etc). The Ledger on the other hand will only load applications signed by
+The CLI App could be nefarious (maybe you downloaded the wrong one, maybe somebody changed the
+program on your computer, etc.). The Ledger on the other hand will only load applications signed by
 Ledger, so your security relies on you verifying the transaction details on the screen.
 
 To be clear, do not compare the output to the output from the CLI shown above (the nefarious app
@@ -265,7 +265,7 @@ might be showing you the fake address), but instead from your original source.
 
 :::
 
-Verify the parameters of the transcation on the screen. Addresses are long and need to be scrolled
+Verify the parameters of the transaction on the screen. Addresses are long and need to be scrolled
 (hold the right or left button only). Once you are satisfied with the field, click both buttons to
 confirm:
 
@@ -291,7 +291,7 @@ Use the link displayed to check on your transaction status.
 
 ### Can't download the zip file because it is untrusted.
 
-1. In the downloads bar of your browser, click the caret and select `Keep`.
+1. In the downloads bar of your browser, click the down arrow and select `Keep`.
 
 <img src={useBaseUrl('img/wallets/ledger/macos-zip-warning2.png')} />
 
@@ -374,13 +374,14 @@ If on Ledger Live you see this error, unplug the ledger from your computer and p
 
 ## Security Model
 
-The attack surface for using the Helium wallet app on a Ledger comprises the Helium app itself, the
-system firmware running on the Ledger Hardware Wallet, the computer that the Ledger Hardware Wallet
-is connected to, and possession/control of the device. For our purposes, the app only needs to
-ensure its correctness and protect the user from the computer that the Ledger Hardware Wallet is
-connected to. Other attack surfaces are beyond our control; we assume that the user physically
-controls the device, is not running malicious/buggy software on the device, and follows proper
-security protocols. The goal of the Helium app is to achieve security given these assumptions.
+The attack surface for using the Helium Wallet app on a Ledger comprises the Helium Wallet app
+itself, the system firmware running on the Ledger Hardware Wallet, the computer that the Ledger
+Hardware Wallet is connected to, and possession/control of the device. For our purposes, the Helium
+only needs to ensure its correctness and protect the user from the computer that the Ledger Hardware
+Wallet app is connected to. Other attack surfaces are beyond our control; we assume that the user
+physically security protocols. The goal of the Helium app is to achieve security given these
+assumptions. controls the device, is not running malicious/buggy software on the device and follows
+proper
 
 The main attack vector that we are concerned with, then, is a computer running malicious software.
 This software may imitate programs like `helium-ledger-cli` in such a way that the user cannot tell
