--- a/docs/network-iot/frequency-plans/region-plans.mdx
+++ b/docs/network-iot/frequency-plans/region-plans.mdx
@@ -15,7 +15,7 @@ appropriate frequencies for gateway configuration for each region.
 
 ## Frequency Plans by Country
 
-Where a frequency plan is "Unknown", it often means the local telecommnications or radio authority
+Where a frequency plan is "Unknown", it often means the local telecommunications or radio authority
 in that country has not yet created
 [Short Range Device (SRD)](https://en.wikipedia.org/wiki/Short-range_device) regulations for either
 the 800 Mhz or 900 Mhz spectrum bands. Helium gateways cannot be operated in countries without valid
@@ -51,30 +51,30 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 
 #### B <a id="b"></a>
 
-| Country                         | Frequency Plan |
-| ------------------------------- | -------------- |
-| Bahamas                         | US915          |
-| Bahrain                         | EU868          |
-| Bangladesh                      | AS923_1        |
-| Barbados                        | AU915_SB1      |
-| Belarus                         | EU868          |
-| Belgium                         | EU868          |
-| Belize                          | AU915_SB1      |
-| Benin                           | EU868          |
-| Bermuda                         | US915          |
-| Bhutan                          | EU868          |
-| Bolivia                         | AS923_1        |
-| Bonaire Sint Eustatius and Saba | EU868          |
-| Bosnia and Herzegovina          | EU868          |
-| Botswana                        | EU868          |
-| Bouvet Island                   | EU868          |
-| Brazil                          | AU915_SB1      |
-| British Indian Ocean Territory  | Unknown        |
-| British Virgin Islands          | AU915_SB1      |
-| Brunei                          | AS923_1        |
-| Bulgaria                        | EU868          |
-| Burkina Faso                    | Unknown        |
-| Burundi                         | EU868          |
+| Country                        | Frequency Plan |
+| ------------------------------ | -------------- |
+| Bahamas                        | US915          |
+| Bahrain                        | EU868          |
+| Bangladesh                     | AS923_1        |
+| Barbados                       | AU915_SB1      |
+| Belarus                        | EU868          |
+| Belgium                        | EU868          |
+| Belize                         | AU915_SB1      |
+| Benin                          | EU868          |
+| Bermuda                        | US915          |
+| Bhutan                         | EU868          |
+| Bolivia                        | AS923_1        |
+| Bonaire, Sint Eustatius & Saba | EU868          |
+| Bosnia and Herzegovina         | EU868          |
+| Botswana                       | EU868          |
+| Bouvet Island                  | EU868          |
+| Brazil                         | AU915_SB1      |
+| British Indian Ocean Territory | Unknown        |
+| British Virgin Islands         | AU915_SB1      |
+| Brunei                         | AS923_1        |
+| Bulgaria                       | EU868          |
+| Burkina Faso                   | Unknown        |
+| Burundi                        | EU868          |
 
 #### C <a id="c"></a>
 
