--- a/docs/network-iot/lorawan-on-helium.mdx
+++ b/docs/network-iot/lorawan-on-helium.mdx
@@ -13,26 +13,26 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 <img className="docsheader" src={useBaseUrl('img/lorawan-on-helium/lorawanheader.png')} />
 
 In typical LoRaWAN Networks, a central or regional LNS is managed by a single entity. Helium’s
-design for a decentralized network, however, means not only do we want gateways (referred to as
+design for a decentralized Network, however, means not only do we want gateways (referred to as
 Hotspots) to be independently owned and operated, but we want to enable the independent operation of
 the LNS.
 
-Without this, access to the network would require permission from a single central entity, the LNS
-operator of the network.
+Without this, access to the Network would require permission from a single central entity, the LNS
+operator of the Network.
 
-Therefore, we want to enable the multi-tenancy of LNSs on the same public LoRaWAN network. Achieving
+Therefore, we want to enable the multi-tenancy of LNSs on the same public LoRaWAN Network. Achieving
 this distinguishes Helium’s LoRaWAN Network from any other: public wireless infrastructure is now
-compatible with privately-run network servers.
+compatible with privately-run Network Servers.
 
 The rest of this article will discuss the networking primitives. If you want to go ahead and run a
-network server, please check out our article about
-[running a network server](/use-the-network/run-a-network-server).
+Network Server, please check out our article about
+[running a Network Server](/use-the-network/run-a-network-server).
 
 ## The OUI
 
 Each LoRaWAN Network Server (LNS) on the Helium Network acquires an Organizationally Unique
 Identifier (OUI). This registers the LNS with the blockchain and allocates two very important
-routing objects owned and maintained by the OUI operator:
+routing objects owned and maintained by the OUI Operator:
 
 - one or more **slabs** of DevAddrs, reserving NwkAddr space for the OUI's devices on the Helium
   Network
@@ -49,8 +49,8 @@ or read more [here](/iot/open-lns).
 :::info
 
 Based on the latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately
-5800 devices, but results still need to be replicated and bracketed. Community members are
-encouraged to run their own benchmarking tests. Instructions
+5800 devices but results still need to be replicated and bracketed. Community members are encouraged
+to run their own benchmarking tests. Instructions
 [here](/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with
 Linux and Bash command line.
 
