--- a/docs/network-iot/frequency-plans/region-plans.mdx
+++ b/docs/network-iot/frequency-plans/region-plans.mdx
@@ -179,7 +179,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | India       | IN865          |
 | Indonesia   | AS923_2        |
 | Iran        | EU868          |
-| Iraq        | Unknown        |
+| Iraq        | EU868          |
 | Ireland     | EU868          |
 | Isle of Man | EU868          |
 | Israel      | AS923_4        |
@@ -257,7 +257,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Netherlands              | EU868          |
 | Netherlands Antilles     | EU868          |
 | New Caledonia            | EU868          |
-| New Zealand              | AS923_1        |
+| New Zealand              | AS923_1C       |
 | Nicaragua                | AU915_SB1      |
 | Niger                    | IN865          |
 | Nigeria                  | EU868          |
@@ -324,7 +324,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Senegal                                      | EU868          |
 | Serbia                                       | EU868          |
 | Seychelles                                   | EU433          |
-| Sierra Leone                                 | Unknown        |
+| Sierra Leone                                 | EU868          |
 | Singapore                                    | AS923_1        |
 | Slovakia                                     | EU868          |
 | Slovenia                                     | EU868          |
