--- a/docs/governance/mobile-charter.mdx
+++ b/docs/governance/mobile-charter.mdx
@@ -1,17 +1,17 @@
 Mobile PoC Working Group Charter
 
-Why Mobile PoC Working Group The success of the MOBILE network is critically tied to our ability to
+Why Mobile PoC Working Group: The success of the MOBILE network is critically tied to our ability to
 quickly build and roll out an effective proof-of-coverage framework that incentivizes useful
 coverage. HIP74 laid some groundwork, but it is necessary to quickly iterate and improve the
 framework beyond the fundamentals outlined in HIP74. To get there quickly, yet empower active
 participation and influence of the process by the community, we want to organize a Mobile PoC
 Working Group.
 
-Mission The goal of the Mobile PoC Working Group is to work collaboratively on the HIPs that improve
-and advance the Proof-of-Coverage framework used by the MOBILE subDAO to ultimately drive incentives
-for creating useful coverage.
+Mission: The goal of the Mobile PoC Working Group is to work collaboratively on the HIPs that
+improve and advance the Proof-of-Coverage framework used by the MOBILE subDAO to ultimately drive
+incentives for creating useful coverage.
 
-Team Mobile POC Working Group will consist of 5-10 members voted in by the Community on Discord.
+Team: Mobile POC Working Group will consist of 5-10 members voted in by the Community on Discord.
 Members interested in participating will have a week to nominate themself by submitting 3-5
 sentences about themselves and their motivation to join the Group in the following form:
 https://forms.gle/JTqCHpHPAzkq4vMs7 As a pilot, members will be elected for three months, and after,
@@ -24,9 +24,11 @@ ability to vote/enact HIPs without formal community voting. Moderation will be d
 group members willing to take on the role. Helium Foundation will do dedicated channels, events, and
 other organizational help.
 
-Process Anyone can propose HIP ideas. If the Group members decide it’s worth taking it to the next
+Process: Anyone can propose HIP ideas. If the Group members decide it’s worth taking it to the next
 level and presenting it to the broader Community, the process of HIP writing starts. Every new HIP
 should follow the template in the HIPs GitHub repo:
 https://github.com/helium/HIP/blob/main/0000-template.md To kickstart the process, we propose the
 Group start with Mobile Mappers HIP, which will define how Mappers will be mapping hexes, what is
 rewarding criteria, etc.
+
+Voting Process:
