--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -224,7 +224,7 @@ describe("onboarding server", () => {
   );
   let onboardingKey: string;
 
-  let base = "https://onboarding.oracle.test-helium.com";
+  let base = "https://onboarding.web.test-helium.com";
   before(async () => {
     me = await Keypair.makeRandom();
     gateway = await Keypair.makeRandom();
