--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -12,75 +12,139 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/community/community.png')} />
 
-The Helium Community is home to hundreds of developers and network operators collaborating to build
-global decentralized wireless networks.
+## What is Helium Governance?
 
-> The Helium Improvement Proposal ("HIP") is the core unit of change.
+The Helium Network is the world's largest continuous decentralized wireless network. The process by
+which the Network can be modified, whether in its technical architecture, the tokens' economic
+model, or meta-governance changes, is governed by the global community of Helium token owners.
 
----
+Helium token (HNT, IOT, MOBILE) owners include Hotspot owners, Network users, wireless network
+operators, hardware manufacturers, and more.
 
-## Propose
+Tokens are created by providing some form of work for the Network. For example, transmitting data
+packets through the internet on behalf of a network user. Hotspot owners provide public, accessible
+wireless coverage. Network users must acquire and burn tokens to send data over the network. Tokens
+must be locked for voting on network changes, ensuring long-term stakeholder alignment.
 
-Anyone is welcome and encouraged to write a HIP and shape the future of decentralized wireless.
+Anyone participating in the Helium ecosystem can submit a Helium Improvement Proposal (HIP) as a
+first step to modifying the Network. All HIPs are published in the public Helium GitHub repository,
+then discussed and debated in public forums, including the Helium community Discord server, and on
+monthly Community Calls. Any Helium token owner is eligible to vote on HIPs. To vote, a Helium token
+owner must first lock their tokens for a period of time, up to four years, which grants the owner
+voting power determined by the number of locked tokens and the lock duration. A 2/3 supermajority of
+the quorum passes proposals.
 
-### Helium Improvement Proposals
+The Helium Foundation serves as a steward for the governance process. The Foundation established the
+initial framework and managed the open Helium GitHub repositories. The Foundation does not vote on
+HIPs but does vet proposals for compliance with the law and technical feasibility. The Foundation’s
+role is to provide expert advice and guidance and to implement HIPs after they have passed.
 
-The Helium Community uses a governance mechanism called Helium Improvement Proposal, known as a
-"HIP," modeled on ["BIP"s][bip] from the Bitcoin community and influenced by open-source development
-practices.
-
-The HIP process introduces, debates, and approves/rejects new changes to core fundamentals of the
-Network, for example, the core blockchain, HNT, IOT, or MOBILE token economics, and Network
-governance itself.
-
-Learn more about HIPs [here][hip-docs].
-
----
-
-## Vote
-
-The Helium Community utilizes network-wide token voting for governance.
-
-All token holders are eligible to vote! To participate in making changes to the Helium Network,
-token holders should stake their tokens in [Realms][realms].
-
-### Realms
-
-[Realms][realms] is a Solana native tool for DAO infrastructure. As part of the migration to the
-Solana Blockchain, the Helium Community adopted Realms as the tool for staking, delegating, and
-on-chain voting. This tool replaces Helium Vote.
-
-Read [this page][realms-tutorial] to learn how to navigate Realms.
-
-Join the DAOs on Realms.
-
-- [Helium DAO][helium-dao]
-- [IOT DAO][iot-dao]
-- [MOBILE DAO][mobile-dao]
+Information about governance is subject to change as the Helium Network constantly evolves. It is
+led by the open-source community that continues to build it.
 
 ---
 
-## Be In The Know
+## Terms
 
-### Community Calls
+- Wallet - A digital application designed for interacting with blockchain-based applications.
+  Wallets enable users to store and manage their digital assets, such as digital tokens and NFTs.
+- Blockchain - A shared, immutable ledger that facilitates the process of recording transactions and
+  tracking assets in a business network. An asset can be tangible (a house, car, cash, land) or
+  intangible (intellectual property, patents, copyrights, branding). Virtually anything of value can
+  be tracked and traded on a blockchain network, reducing risk and cutting costs for all involved
+  (IBM).
+- Solana - A blockchain that uses a proof-of-stake (PoS) mechanism to provide smart contract
+  functionality as well as a mechanism called proof-of-history (PoH), which uses hashed timestamps
+  to verify when transactions occur.
+- Token - Tokens are digital assets that utilize cryptography for secure transactions, represent
+  value, and can be used for various purposes within a decentralized network or ecosystem.
+- Non-Fungible Token (NFT) - A unique digital identifier that is recorded on a blockchain and is
+  used to certify ownership and authenticity. It cannot be copied, substituted, or subdivided.
+- Consensus Protocols – A set of rules that define the instructions for how to be an autonomous
+  participant in a distributed computer network and come to an agreement about the exact state of
+  common data.
+- Node - Refers to individual devices or computers that participate in maintaining the network by
+  storing a copy of the blockchain, validating transactions, and relaying information to achieve
+  consensus.
+- Validators - A distributed network actor responsible for verifying and validating transactions and
+  blocks, maintaining the network's security and consensus.
+- Proof-of-Stake (PoS) - A PoS system is a type of blockchain consensus protocol that achieves
+  verification by selecting validators in proportion to their quantity of holdings in the associated
+  cryptocurrency.
+- Proof-of-History (PoH) - A consensus protocol unique to Solana, Proof-of-History is a verifiable
+  and sequential timestamping mechanism that provides a trustless and efficient ordering of events
+  in the blockchain.
+- Helium - A global decentralized wireless network of networks utilizing a token-incentive model.
+- Helium Improvement Proposals (HIP) - A bill for changes to the network.
+- Discord - A web-based community chat platform.
+- GitHub - A web-based platform that allows developers to collaborate, manage, and store their code
+  repositories.
+- Repository - A storage location that contains all the files, documentation, and version history of
+  a project.
+- Realms - A platform for decentralized projects to manage token-based governance operations and
+  manage token-based governance operations.
+- Helium Network Token (HNT) - The native token of the Helium Network, used for incentivizing and
+  securing the decentralized wireless network of networks through redemption and swap features.
+- IOT subNetwork Token (IOT) - A token specific to the LoRaWAN Network, used for incentivizing and
+  securing the decentralized wireless network for IoT devices.
+- MOBILE subNetwork (MOBILE) - A token specific for the 5G CBRS Network, used for incentivizing and
+  securing the decentralized wireless network for Cellular/Mobile devices.
+- Staking (or “Lock Up”) - The act of temporarily locking up tokens as collateral to participate in
+  block validation and consensus mechanisms, earning rewards for supporting network operations or
+  generating Voting Power.
+- Voting Power - 100 veHNT is more than ten veHNT. The higher amount would mean you have more weight
+  in deciding vote outcomes. The more HNT you stake for veHNT, the more voting power you have.
+- Vote Escrowed ("ve") - A position created by staking your tokens that only functions for Network
+  or subNetwork voting. Vote Escrowed positions show up in wallets as NFTs and are
+  non-transferrable.
+- veHNT - A position created by staking your HNT. Used for voting on proposals that affect the
+  entire Helium Network of Networks model.
+- veIOT - A position created by staking your IOT. Used for IOT Network governance.
+- veMOBILE - A position created by staking your MOBILE. Used for MOBILE Network governance.
 
-The Helium Community holds monthly video calls (led by the [Helium Foundation][foundation]). These
-typically happen on the **4th Wednesday of each month at Noon ET**. Each call has an open agenda,
-and any community member can join and add items to the agenda to be discussed.
+---
 
-- [Community Call Notes and Agenda][community-call-notes]
-- [Video recordings of previous community calls][community-call-video] are linked in the Community
-  Call notes.
+## Evolution of Governance
 
-### Discord
+At the beginning of the Helium Network, the Network Founders designed their own Blockchain, the
+Helium Blockchain (Helium Layer 1 or L1), written in Erlang, a general-purpose programming language
+for early telecommunications systems.
 
-The [Helium Discord][discord] is the primary communication channel for the Helium Community. Here
-you'll find real-time, in-depth discussion on all parts of the Helium Network. It is also the
-primary venue to get support for using the Network.
+As the Network began to store large amounts of data, the chain became slow and costly, both to
+operate and to use. The Solana Blockchain was proposed as an alternative in HIP 70 and voted and
+approved by the Helium Community. The passing of HIP 70 ushered in a subsequent Blockchain migration
+and increased tooling for voting and governance.
 
-All HIP and Governance discussions take place on the [Helium Discord][discord].
+The governance history of the Helium Network can be broken thus far into three phases. Each phase
+contains a record of past voting. These votes reflect the community's decision-making process and
+provide insight into the evolution of the network. The next part of this document will explain the
+evolution of voting and how you can view past voting history:
 
-- [Join the Helium Community Discord][discord]
+1. [Voting in Discord by raising hands](/phase-1)
+2. [Helium Vote on-chain voting on the Helium L1](/phase-2)
+3. [Realms on Solana](/phase-3)
+
+---
+
+## Participate
+
+Ready to participate? Join the global decentralized wireless network and participate in Helium
+Governance, including specific HIPs, voting procedures, and Working Groups. Refer to the provided
+links and resources.
+
+1. Discord: The Helium Discord platform serves as the primary communication channel for the Helium
+   Network Community. It offers real-time discussions, support, and engagement opportunities.
+2. GitHub Repository: The HIP GitHub repository provides access to the Helium Improvement Proposals
+   and related discussions.
+3. Social Media and Ecosystem Voices: The Helium Foundation and various influencers on platforms
+   like Twitter, Discord, and YouTube provide updates, debates, and explanations of HIPs and
+   governance-related matters.
+4. Monthly Community Calls: The Helium Community holds monthly video calls (led by the Helium
+   Foundation). These typically happen on the 4th Wednesday of each month at Noon ET. Each call has
+   an open agenda, and any community member can join and add items to the agenda to be discussed.
+5. Community Calendar: The Helium Foundation maintains a calendar of ecosystem events and
+   happenings. You can access and subscribe to this at:
+   [helium.foundation/community-calendar](helium.foundation/community-calendar).
 
 ### Socials + Ecosystem Voices
 
