add phases pages as subpages to governance

--- a/docs/governance/phase-2.mdx
+++ b/docs/governance/phase-2.mdx
@@ -5,7 +5,7 @@ pagination_label: Phases of Helium Governance
 sidebar_label: Phase 2
 description: Helium Documentation
 image:
-slug: /phase-2
+slug: /governance/phase-2
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
