--- a/docs/governance/phase-3.mdx
+++ b/docs/governance/phase-3.mdx
@@ -5,7 +5,7 @@ pagination_label: Phases of Helium Governance
 sidebar_label: Phase 3
 description: Helium Documentation
 image:
-slug: /phase-3
+slug: /governance/phase-3
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'## Phase 3: Realms on Solana
