--- a/docs/governance/phase-1.mdx
+++ b/docs/governance/phase-1.mdx
@@ -5,7 +5,7 @@ pagination_label: Phases of Helium Governance
 sidebar_label: Phase 1
 description: Helium Documentation
 image:
-slug: /phase-1
+slug: /governance/phase-1
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
